# Mineclone

./: .clang-tidy  .env  .gitignore  CMakeLists.txt  Readme.md  settings.json  shell.nix
asset/shader/: base.frag  base.vert
docs/: storage.md
poc/: circular_array.py  shell.nix
src/: main.cpp  mineclone.cpp  mineclone.h
src/engine/: asset.h  mineclone.cpp  mineclone.h
src/engine/component/: block_texture.h  camera.h  camera_event.h  chunk.h  chunk_array.h  entity.h  mesh.h  player.h  renderer_context.cpp  renderer_context.h  shader.cpp  shader.h  shader_layout.h  texture_atlas.h  world.h
src/engine/data/: asset.h  block_texture.h  camera_event.h  shader_layout.h
src/engine/data_structure/: chunk_array.h
src/engine/system/: camera_controller.h  event_manager.h  player_controller.h  renderer.cpp  renderer.h  world.cpp  world.h  world_renderer.cpp  world_renderer.h
src/engine/utils/: bind_this.h  constexpr_functions.h  logging.cpp  logging.h  logging_utils.h  mat.h  mat_opengl.h  math.h  profiler.h  range_iterator.h  utils.h
test/: CMakeLists.txt  bind_this.cpp  math.cpp  math_opengl.cpp  range_it.cpp
